# animeforge

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: 0-auto-approve.yml  0-process-queue.yml  0-product-owner.yml  1-claude-plan.yml  2-claude-dev.yml  3-claude-fix-ci.yml  4-claude-review.yml  check-work-hours.yml  ci.yml
src/animeforge/: __init__.py  __main__.py  app.py  cli.py  config.py  preview_server.py  validation.py
src/animeforge/backend/: __init__.py  base.py  comfyui.py  fal_backend.py  mock.py
src/animeforge/models/: __init__.py  character.py  enums.py  export.py  pose.py  project.py  scene.py
src/animeforge/pipeline/: __init__.py  assembly.py  character_gen.py  consistency.py  effect_gen.py  export.py  poses.py  scene_gen.py  validation.py
src/animeforge/poses/: __init__.py  drinking.json  idle.json  loader.py  looking_window.json  reading.json  stretching.json  typing.json
src/animeforge/runtime/: animeforge-runtime.js  scene-loader.js
src/animeforge/schemas/: scene.schema.json
src/animeforge/screens/: __init__.py  character_studio.py  dashboard.py  export_screen.py  generation.py  preview.py  scene_editor.py  settings_screen.py
src/animeforge/templates/: index.html.jinja2  preview.html  scene.css.jinja2
src/animeforge/widgets/: __init__.py  animation_picker.py  image_preview.py  progress_panel.py  state_graph.py  zone_editor.py
tests/: conftest.py  test_animated_export.py  test_app.py  test_assembly.py  test_character_gen.py  test_cli.py  test_comfyui_backend.py  test_config.py  test_dry_run.py  test_export.py  test_fal_backend.py  test_mock_backend.py  test_models.py  test_pipeline.py  test_preview_server.py  test_scene_gen.py  test_screens.py  test_validation.py  test_widgets.py  test_widgets_animation.py
